@@ -1,3 +1,7 @@
+2008-04-23  Sergey Udaltsov <svu@gnome.org>
+
+	* gswitchit-applet.c: fixed email
+
 2008-04-05  Ilkka Tuohela <hile@iki.fi>
 
 	* help/fi: Added Finnish translation by Jukka Heikkilä.
